Connect backend to frontend
Creating polls now works, theres a filtering bug but it will be solved

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -121,6 +121,16 @@ header>.inner {
         font-family: "Rubik";
         font-size: 16px;
     }
+
+    .only-desktop {
+        display:none;
+    }
+}
+
+.nowrap {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 [x-cloak] {
