--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -53,7 +53,7 @@ header>.inner {
     color: rgba(255, 255, 255, 0.8);
 }
 
-.header-link2 {
+.desktop-header-links>*+* {
     border-left: 2px solid white;
 }
 
